@@ -1,5 +1,8 @@
 2012-03-28  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/52691
+	* gcc.dg/pr52691.c: New test.
+
 	PR middle-end/52750
 	* gcc.c-torture/compile/pr52750.c: New test.
 
